# RealsenseWeedDetection

./: README.md  build.gradle  local.properties
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/example/myapplication/: AzureActivity.kt  CameraActivity.java  DirectoryActivity.java  FilesActivity.java  GlobalClass.java  MainActivity.java  Playback.java  StreamActivity.java  VideoActivity.java
app/src/main/res/layout/: activity_playback.xml  activity_stream.xml  activity_video.xml  directories.xml  directory_item.xml  files.xml  files_item.xml  main_layout.xml  select_camera.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
gradle/wrapper/: gradle-wrapper.properties
